Fixed some scrolling sizing problems. Now I don't have scrolling on tablet design layout. Was caused by a cover Img

--- a/css/style.css
+++ b/css/style.css
@@ -191,38 +191,24 @@ header {
 }
 
 .main-article-1 {
-  background-image:
-    linear-gradient(
+  background-image: linear-gradient(
       337deg,
       rgba(116, 116, 116, 0) 33%,
       rgba(255, 0, 0, 0.4158614129245448) 56%,
       rgba(255, 93, 93, 0.530707351299895) 84%
     ),
-    linear-gradient(transparent, rgb(0, 0, 0)),
-    url("../img/pic1.png");
+    linear-gradient(transparent, rgb(0, 0, 0)), url("../img/pic1.png");
   grid-row: 1 / 3;
 }
 
 .main-article-2 {
-  background-image:
-    linear-gradient(
-      transparent,
-      rgb(0, 0, 0)
-    ),
-    url(
-      "../img/boris-chair-gq-796x417.png"
-    );
+  background-image: linear-gradient(transparent, rgb(0, 0, 0)),
+    url("../img/boris-chair-gq-796x417.png");
 }
 
 .main-article-3 {
-  background-image:
-    linear-gradient(
-      transparent,
-      rgb(0, 0, 0)
-    ),
-    url(
-      "../img/violet.jpg"
-    );
+  background-image: linear-gradient(transparent, rgb(0, 0, 0)),
+    url("../img/violet.jpg");
 }
 
 /* Latest news section styles */
@@ -340,15 +326,10 @@ header {
 
 .cat-last-art-hero {
   max-height: 276px;
+  max-width: 96%;
   align-items: flex-start;
-  background:
-    linear-gradient(
-      transparent,
-      rgb(0, 0, 0)
-    ),
-    url(
-      ../img/by-cat-article.jpg
-    );
+  background: linear-gradient(transparent, rgb(0, 0, 0)),
+    url(../img/by-cat-article.jpg);
   background-size: cover;
   padding: 150px 15px 5px 15px;
 }
@@ -406,9 +387,8 @@ header {
 }
 
 .deal-img {
-  width: 270px;
-  height: 200px;
-  object-fit: cover;
+  width: 100%;
+  max-height: 200px;
 }
 
 /* Footer Style */
@@ -523,6 +503,7 @@ footer {
 
   .articles-by-category-container {
     grid-template-columns: 1fr;
+    gap: 2px;
   }
 
   .last-deals-container {
@@ -535,8 +516,8 @@ footer {
   }
 
   .deal-img {
-    width: 75px;
-    height: 75px;
+    max-width: 75px;
+    max-height: 75px;
     float: left;
     margin-right: 10px;
   }
@@ -607,10 +588,6 @@ footer {
     padding: 0 20px;
   }
 
-  /* .latest-news-title {
-    margin-top: 75px;
-  } */
-
   .latest-news-news {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
@@ -623,6 +600,7 @@ footer {
 
   .articles-by-category-container {
     grid-template-columns: 1fr;
+    gap: 2px;
   }
 
   .cat-last-art-hero {
@@ -639,6 +617,10 @@ footer {
 
   .funding-round-4 {
     display: none;
+  }
+
+  .funding-rounds-title-container {
+    flex-flow: column;
   }
 }
 
